# spleeter_stremlit

./: .gitignore  README.md  pyproject.toml  requirements.txt
spleeter_stremlit/: main.py  utils.py
tests/: test_spleeter_stremlit.py
